--- a/day2/package.json
+++ b/day2/package.json
@@ -8,9 +8,12 @@
     "ejs": "^2.5.7",
     "express": "^4.16.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^1.17.2"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:dev": "nodemon express_server.js"
   },
   "keywords": [],
   "author": "",
