--- a/day2/package.json
+++ b/day2/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "nodemon express_server.js -L"
+    "start:dev": "nodemon express_server.js"
   },
   "keywords": [],
   "author": "",
