--- a/tinyurl/package.json
+++ b/tinyurl/package.json
@@ -8,7 +8,8 @@
     "body-parser": "^1.18.2",
     "cookie-session": "^2.0.0-beta.3",
     "ejs": "^2.5.7",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "method-override": "^2.3.10"
   },
   "devDependencies": {
     "nodemon": "^1.17.2"
